--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,6 @@
 /* Global Variables */
 :root {
-  --main-color: #10cab7;
+  --main-color: #19c8fc;
   --secondary-color: #2c4755;
   --section-padding: 60px;
   --section-background: #f6f6f6;
@@ -22,6 +22,7 @@ html {
 }
 body {
  font-family: 'Open Sans', sans-serif;
+ background-color: black;
 }
 
 ul {
@@ -62,7 +63,74 @@ ul {
 
 /* Components */
 /* Heaer Start */
+  header {
+    
+  }
 
+  header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+  }
+
+  header .container::after {
+    content: '';
+    position: absolute;
+    height: 1px;
+    background-color: #a2a2a2;
+    bottom: 0;
+    left: 15px;
+    width: calc(100% - 30px) ;
+  }
+
+  header .logo img {
+    height: 35px;
+  }
+  header nav {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
+  header nav ul {
+    display: flex;
+  }
+
+  header nav ul li a {
+    padding: 30px 10px;
+    display: block;
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+    transition: 0.3s;
+    position: relative;
+    z-index: 2;
+  }
+
+  header nav ul li a.active ,
+  header nav ul li a:hover {
+    color: var(--main-color);
+    border-bottom: 1px solid var(--main-color);
+  }
+
+  header nav .form {
+   width: 40px;
+   height: 30px;
+   position: relative;
+   margin-left: 30px; 
+   border-left: 1px solid white;
+  }
+
+  header nav .form i {
+    color: white;
+    position: absolute;
+    font-size: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+  }
 /* Heaer End */
 
 /* Landing Start */
