--- a/css/global.css
+++ b/css/global.css
@@ -64,7 +64,10 @@ ul {
 /* Components */
 /* Heaer Start */
   header {
-    
+    position: absolute;
+    left: 0;
+    width: 100%;
+    z-index: 2;
   }
 
   header .container {
@@ -72,6 +75,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     position: relative;
+    min-height: 97px;
   }
 
   header .container::after {
@@ -94,8 +98,38 @@ ul {
     justify-content: flex-end;
   }
 
+  header nav .toggle-menu {
+    color: white;
+    font-size: 22px;
+  }
+
+  @media (min-width:768px ) {
+    header nav .toggle-menu {
+      display: none;
+    }
+  }
+
   header nav ul {
     display: flex;
+  }
+
+  @media (max-width:767px ) {
+    header nav ul {
+      display: none;
+    }
+    header nav .toggle-menu:hover + ul {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background-color: rgb(0 0 0 / 50%);
+    }
+
+    header nav ul li a {
+      padding: 15px !important;
+    }
   }
 
   header nav ul li a {
