--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,9 @@
 /* Global Variables */
 :root {
   --main-color: #19c8fc;
-  --secondary-color: #2c4755;
-  --section-padding: 60px;
-  --section-background: #f6f6f6;
+  --transparent-color: rgb(15 116 143 / 50%);
   --main-duration: 0.3s;
+  --section-padding: 100px;
 }
 /* Global Variables */
 
@@ -22,7 +21,6 @@ html {
 }
 body {
  font-family: 'Open Sans', sans-serif;
- background-color: black;
 }
 
 ul {
@@ -60,7 +58,49 @@ ul {
 /* End of the Global Rules */
 
 /* Components */
+  .main-heading {
+    text-align: center;
+  }
 
+  .main-heading h2 {
+    font-size: 40px;
+    font-weight: normal;
+    position: relative;
+    margin-bottom: 70px;
+    text-transform: uppercase;
+  }
+
+  .main-heading h2::before {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 2px;
+    background-color: #333;
+    bottom: -30px;
+    width: 120px;
+  }
+
+  .main-heading h2::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    border: 2px solid #333;
+    bottom: -38px;
+    background-color: white;
+  }
+
+  .main-heading p {
+    width: 600px;
+    margin: 0 auto 100px;
+    max-width: 100%;
+    line-height: 1.8;
+    color: #777;
+  }
 /* Components */
 /* Heaer Start */
   header {
@@ -168,20 +208,299 @@ ul {
 /* Heaer End */
 
 /* Landing Start */
+ .landing {
+  min-height: 100vh;
+  background-color: #1f2021;
+  background-image: url("../images/landing.jpg");
+  background-size: cover;
+  position: relative;
+}
+.landing .overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 60%);
+}
+.landing .text {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50%;
+  padding: 50px;
+  background-color: var(--transparent-color);
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+}
 
+@media (max-width: 767px) {
+  .landing .text {
+    width: 100%;
+  }
+  .landing .text .content {
+  max-width: 100%;
+}
+}
+
+.landing .text .content {
+  max-width: 500px;
+}
+
+  .landing .text .content h2 {
+    font-size: 32px;
+    font-weight: normal;
+    line-height: 1.4;
+    margin-bottom: 20px;
+  }
+  .landing .text .content p {
+    font-size: 14px;
+    line-height: 1.6;
+  }
+
+  .landing .change-background {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #ddd;
+  }
+
+  @media (max-width: 767px) {
+    .landing .change-background {
+      display: none;
+    }
+  }
+
+  .landing .fa-angle-left {
+    left: 30px;
+  }
+  .landing .fa-angle-right {
+    right: 30px;
+  }
+
+  .landing .bullets {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 30px;
+    display: flex;
+  }
+
+  .landing .bullets li {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+
+  .landing .bullets li.active{
+    background-color: var(--main-color);
+    border-color: var(--main-color);
+  }
 /* Landing End */
 
-/* Features Start */
-
-/* Features End */
-
-
 /* Services Start */
+.services {
+  padding-top: var(--section-padding);
+  padding-bottom:var(--section-padding) ;
+}
 
+@media (min-width: 768px) {
+  .services .services-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-column-gap: 40px;
+    grid-row-gap: 60px;
+  }
+}
+
+.services .srv-box {
+  display: flex;
+}
+
+.services .srv-box i {
+  margin-right: 50px;
+}
+
+@media (max-width: 767px) {
+  .services .srv-box {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .services .srv-box i {
+    margin: 0 0 30px;
+  }
+}
+.services .srv-box h3{
+  margin-bottom: 30px;
+  color: var(--main-color);
+}
+
+.services .srv-box p{
+  line-height: 1.8;
+  color: #777;
+}
 /* Services End */
 
-/* Portfolio Start */
+/* Design Start */
+  .design {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+    height: 600px;
+    position: relative;
+    background-image: url(../images/design-features.jpg);
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+  }
 
+  .design::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 60%);
+  }
+
+  .design .image,
+  .design .text {
+    position: relative;
+    z-index: 2;
+    flex: 1;
+  }
+
+  .design .image {
+    text-align: center;
+  }
+
+  @media (max-width:767px) {
+    .design .image{
+      display: none;
+    }
+  }
+
+  .design .image img {
+    position: relative;
+    bottom: -150px;
+  }
+
+   .design .text {
+    color: white;
+    padding: 50px;
+    background-color: var(--transparent-color);
+  }
+
+  .design .text h2 {
+    font-weight: normal;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+  }
+
+  .design .text ul li {
+    padding: 15px 0;
+  }
+
+  .design .text ul li::before {
+    font-family: 'Font Awesome 5 Free';
+    content: '\f390';
+    font-weight: 900;
+    margin-right: 12px;
+  }
+/* Design End */
+
+
+/* Portfolio Start */
+  .portfolio {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+  }
+
+  .portfolio .shuffle {
+    display: flex;
+    justify-content: center;
+  }
+
+  .portfolio .shuffle li {
+    padding: 10px;
+  }
+
+  .portfolio .shuffle li.active {
+    background-color: var(--main-color);
+    color: white;
+  }
+
+  .portfolio .images-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 60px;
+  }
+  .portfolio .images-container .box {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .portfolio .images-container .box:hover .caption {
+    bottom: 0;
+  }
+
+  .portfolio .images-container .box:hover  img {
+    transform: rotate(3deg) scale(1.1);
+  }
+
+  @media (min-width: 768px) {
+    .portfolio .images-container .box {
+      flex-basis: 50%;
+    }
+  }
+
+  @media (min-width: 1199px) {
+    .portfolio .images-container .box {
+      flex-basis: 25%;
+    }
+  }
+
+  .portfolio .images-container .box img {
+    max-width: 100%;
+    transition: 0.3s;
+    cursor: pointer;
+  }
+  .portfolio .images-container .box .caption {
+    position: absolute;
+    left: 0;
+    padding: 20px;
+    background-color: white;
+    width: 100%;
+    transition: 0.3s;
+    bottom: -100%;
+  }
+
+  .portfolio .images-container .box .caption h4 {
+    font-weight: normal;
+    margin-bottom: 10px;
+  }
+
+  .portfolio .images-container .box .caption p {
+    color: var(--main-color);
+  }
+
+  .portfolio .more {
+    background-color: var(--main-color);
+    color: white;
+    padding: 15px 20px;
+    display: block;
+    margin: 30px auto;
+    width: fit-content;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 /* Portfolio End */
 
 /* About Start */
