--- a/css/global.css
+++ b/css/global.css
@@ -503,11 +503,75 @@ ul {
   }
 /* Portfolio End */
 
-/* About Start */
+/* Video Start */
+  .video{
+    position: relative;
+  }
+  .video::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 40%);
+  }
 
-/* About End */
+  .video video {
+    width: 100%;
+  }
 
-/* Contact us Start */
+  .video .text {
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 50px;
+    background-color: var(--transparent-color);
+    color: white;
+    text-align: center;
+  }
+
+  .video .text h2 {
+    margin: 0 0 30px;
+    text-transform: uppercase;
+    font-weight: normal;
+  }
+
+  .video .text p {
+    margin-bottom: 30px;
+  }
+
+  .video .text button {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    text-transform: uppercase;
+  }
+/* Video End */
+
+/* About us Start */
+.about {
+ padding-top: var(--section-padding);
+ overflow: hidden;
+ text-align: center;
+}
+
+.about img {
+  position: relative;
+  bottom: -120px;
+  margin-top: -120px;
+  max-width: 100%;
+}
+
+@media (max-width:767px) {
+  .about img {
+    bottom: -60px;
+    margin-top: -60px;
+  }
+}
+/* About us End */
 
 /* Footer End */
 
